--- a/api_downloader/api_download.ipynb
+++ b/api_downloader/api_download.ipynb
@@ -14,28 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get data from 'World Development Indicators' dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_code = ['BOL','CRI','DMA','SLV','GUY','PAN','URY','SUR','ARG','BRA','CHL','MEX','PRY','BLZ','COL','ECU','GTM','HND','NIC','PER','KOR'] # Latin America(LCN) + South Korea \n"
+    "country_code = ['BOL','CRI','DMA','SLV','GUY','PAN','URY','SUR','ARG','BRA','CHL','MEX','PRY','BLZ','COL','ECU','GTM','HND','NIC','PER','KOR'] # Latin America(LCN) + South Korea "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get data from 'World Development Indicators' dataset\n",
     "class API_DOWNLOADER():\n",
     "\n",
     "    def __init__(self, INDICATOR, FILE_DIR):\n",
@@ -44,8 +36,13 @@
     "        self.idct = INDICATOR\n",
     "        self.folder =  f'{FILE_DIR}/downloads'\n",
     "        self.dir = f'{self.folder}/{self.idct}'\n",
-    "    def api_download(self):\n",
     "        \n",
+    "        self.api_download()\n",
+    "        self.change_csv_file_name()\n",
+    "        self.change_colunm_name()\n",
+    "        \n",
+    "        \n",
+    "    def api_download(self):        \n",
     "        try:\n",
     "            os.makedirs(f'{self.folder}')      \n",
     "        except:\n",
@@ -54,34 +51,49 @@
     "        url = f'http://api.worldbank.org/v2/country/{self.ctr}/indicator/{self.idct}/?source=2&downloadformat=csv&dataformat=table'\n",
     "        zip_file = f'{self.dir}.zip'\n",
     "        request.urlretrieve(url, zip_file)\n",
+    "        print('Download Done')\n",
     "        \n",
     "        with zipfile.ZipFile(zip_file, 'r') as z:\n",
     "            z.extractall(f'{self.dir}')\n",
-    "        \n",
-    "        print('Download Done')\n",
-    "        \n",
+    "                \n",
     "    \n",
-    "    def change_csv_file_name(self): \n",
-    "    \n",
+    "    def change_csv_file_name(self):     \n",
     "        names = os.listdir(f'{self.dir}')\n",
     "        os.rename(f'{self.dir}/{names[0]}', f'{self.dir}/{self.idct}.csv')\n",
+    "        \n",
+    "        print('File has been renamed')\n",
     "\n",
     "\n",
+    "    def change_colunm_name(self):\n",
+    "        df = pd.read_csv(f'{self.dir}/{self.idct}.csv', header=2)\n",
+    "        del df['Unnamed: 65']\n",
     "\n",
+    "        new_names = {\n",
+    "                    'Country Name' : 'Country_Name',\n",
+    "                    'Country Code' : 'Country_Code',\n",
+    "                    'Indicator Name' : 'Series_Name',\n",
+    "                    'Indicator Code' : 'Series_Code',\n",
+    "                }\n",
     "\n",
+    "        df.rename(columns=new_names, inplace=True)\n",
+    "        df.to_csv(f'{self.dir}/{self.idct}.csv', mode='w')        \n",
+    "\n",
+    "        print('Columns has been renamed & updated csv file')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download Done\n"
+      "Download Done\n",
+      "File has been renamed\n",
+      "Columns has been renamed & updated csv file\n"
      ]
     }
    ],
@@ -91,21 +103,12 @@
     "\n",
     "downloader = API_DOWNLOADER(indicator, file_dir)\n",
     "\n",
-    "downloader.api_download()"
+    "# downloader.api_download()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downloader.change_csv_file_name()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -129,10 +132,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country Name</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>Indicator Name</th>\n",
-       "      <th>Indicator Code</th>\n",
+       "      <th>Country_Name</th>\n",
+       "      <th>Country_Code</th>\n",
+       "      <th>Series_Name</th>\n",
+       "      <th>Series_Code</th>\n",
        "      <th>1960</th>\n",
        "      <th>1961</th>\n",
        "      <th>1962</th>\n",
@@ -140,6 +143,7 @@
        "      <th>1964</th>\n",
        "      <th>1965</th>\n",
        "      <th>...</th>\n",
+       "      <th>2011</th>\n",
        "      <th>2012</th>\n",
        "      <th>2013</th>\n",
        "      <th>2014</th>\n",
@@ -149,7 +153,6 @@
        "      <th>2018</th>\n",
        "      <th>2019</th>\n",
        "      <th>2020</th>\n",
-       "      <th>Unnamed: 65</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -659,11 +662,11 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21 rows × 66 columns</p>\n",
+       "<p>21 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Country Name Country Code                    Indicator Name  \\\n",
+       "   Country_Name Country_Code                       Series_Name  \\\n",
        "0     Argentina          ARG  Agricultural machinery, tractors   \n",
        "1        Belize          BLZ  Agricultural machinery, tractors   \n",
        "2       Bolivia          BOL  Agricultural machinery, tractors   \n",
@@ -686,7 +689,7 @@
        "19     Suriname          SUR  Agricultural machinery, tractors   \n",
        "20      Uruguay          URY  Agricultural machinery, tractors   \n",
        "\n",
-       "    Indicator Code  1960    1961    1962    1963    1964    1965  ...  2012  \\\n",
+       "       Series_Code  1960    1961    1962    1963    1964    1965  ...  2011  \\\n",
        "0   AG.AGR.TRAC.NO   NaN  120000  130000  140000  150000  155000  ...   NaN   \n",
        "1   AG.AGR.TRAC.NO   NaN     211     269     314     402     400  ...   NaN   \n",
        "2   AG.AGR.TRAC.NO   NaN    1300    1400    1500    1600    1700  ...   NaN   \n",
@@ -709,40 +712,40 @@
        "19  AG.AGR.TRAC.NO   NaN     580     590     600     730     760  ...   NaN   \n",
        "20  AG.AGR.TRAC.NO   NaN   24695   25330   25960   26590   27220  ...   NaN   \n",
        "\n",
-       "    2013  2014  2015  2016  2017  2018  2019  2020  Unnamed: 65  \n",
-       "0    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "1    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "2    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "3    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "4    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "5    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "6    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "7    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "8    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "9    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "10   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "11   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "12   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "13   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "14   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "15   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "16   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "17   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "18   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "19   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
-       "20   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN          NaN  \n",
+       "    2012  2013  2014  2015  2016  2017  2018  2019  2020  \n",
+       "0    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "1    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "5    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "6    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "7    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "8    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "9    NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "10   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "11   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "12   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "13   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "14   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "15   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "16   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "17   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "18   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "19   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "20   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[21 rows x 66 columns]"
+       "[21 rows x 65 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('test\\API_Download_DS2_EN_csv_v2_3979070.csv', header=2)\n",
-    "df"
+    "df = pd.read_csv('test\\downloads\\AG.AGR.TRAC.NO\\AG.AGR.TRAC.NO.csv', index_col=0)\n",
+    "df\n"
    ]
   }
  ],
