Update EDA.ipynb (WIP)

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -406,75 +406,41 @@
        "[2541 rows x 65 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('./dataset/merged.csv', index_col = 0)"
+    "df = pd.read_csv('./merged.csv', index_col = 0)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Net official flows from UN agencies, UNICEF (current US$)'\n",
+      " 'Technical cooperation grants (BoP, current US$)'\n",
+      " 'Net official flows from UN agencies, UNHCR (current US$)'\n",
+      " 'Prevalence of HIV, total (% of population ages 15-49)'\n",
+      " 'Net official flows from UN agencies, IAEA (current US$)']\n",
+      "['DT.NFL.UNCF.CD' 'BX.GRT.TECH.CD.WD' 'DT.NFL.UNCR.CD' 'SH.DYN.AIDS.ZS'\n",
+      " 'DT.NFL.IAEA.CD']\n"
+     ]
+    }
+   ],
    "source": [
-    "import requests\n",
-    "import json\n",
+    "Series_Name = df.Series_Name.unique() # 121 \n",
+    "Series_Code = df.Series_Code.unique() # 121 \n",
     "\n",
-    "indi_url_2 = 'http://api.worldbank.org/v2/topic/2/indicator?format=json&per_page=145'\n",
-    "indi_url_9 = 'http://api.worldbank.org/v2/topic/9/indicator?format=json&per_page=145'\n",
-    "\n",
-    "res_2 = requests.get(indi_url_2)\n",
-    "res_9 = requests.get(indi_url_9)\n",
-    "indicators_2 = json.loads(res_2.content.decode('utf-8'))\n",
-    "indicators_9 = json.loads(res_9.content.decode('utf-8'))\n",
-    "\n",
-    "# Aid-effectness 77 \n",
-    "# Infrastructure 76 \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.Series_Name.unique() # 121 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic = {} \n",
-    "\n",
-    "for i in indicators_2[1]:\n",
-    "    id = i['id']\n",
-    "    if id in df.Series_Code.unique():\n",
-    "        dic[f'{id}'] = [i['name'], i['sourceNote']]\n",
-    "\n",
-    "for i in indicators_9[1]:\n",
-    "    id = i['id']\n",
-    "    if id in df.Series_Code.unique():\n",
-    "        dic[f'{id}'] = [i['name'], i['sourceNote']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic\n",
-    "\n",
-    "df = pd.DataFrame(data=dic)\n",
-    "df = (df.T)\n",
-    "df.to_excel('./Series.xlsx')"
+    "print(Series_Name[:5])\n",
+    "print(Series_Code[:5])\n"
    ]
   },
   {
@@ -484,47 +450,130 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Series_Code</th>\n",
+       "      <th>Series_Name</th>\n",
+       "      <th>sourceNote</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BX.GRT.EXTA.CD.WD</td>\n",
+       "      <td>Grants, excluding technical cooperation (BoP, ...</td>\n",
+       "      <td>Grants are defined as legally binding commitme...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BX.GRT.TECH.CD.WD</td>\n",
+       "      <td>Technical cooperation grants (BoP, current US$)</td>\n",
+       "      <td>Technical cooperation grants include free-stan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DC.DAC.AUSL.CD</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors, Austr...</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors are th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DC.DAC.AUTL.CD</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors, Austr...</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors are th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DC.DAC.BELL.CD</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors, Belgi...</td>\n",
+       "      <td>Net bilateral aid flows from DAC donors are th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>IT.NET.SECR</td>\n",
+       "      <td>Secure Internet servers</td>\n",
+       "      <td>The number of distinct, publicly-trusted TLS/S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>IT.NET.SECR.P6</td>\n",
+       "      <td>Secure Internet servers (per 1 million people)</td>\n",
+       "      <td>The number of distinct, publicly-trusted TLS/S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>IT.NET.USER.ZS</td>\n",
+       "      <td>Individuals using the Internet (% of population)</td>\n",
+       "      <td>Internet users are individuals who have used t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>TM.VAL.ICTG.ZS.UN</td>\n",
+       "      <td>ICT goods imports (% total goods imports)</td>\n",
+       "      <td>Information and communication technology goods...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>TX.VAL.ICTG.ZS.UN</td>\n",
+       "      <td>ICT goods exports (% of total goods exports)</td>\n",
+       "      <td>Information and communication technology goods...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>121 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['DT.NFL.UNCF.CD', 'BX.GRT.TECH.CD.WD', 'DT.NFL.UNCR.CD',\n",
-       "       'SH.DYN.AIDS.ZS', 'DT.NFL.IAEA.CD', 'DC.DAC.SVNL.CD',\n",
-       "       'DT.NFL.WFPG.CD', 'DT.ODA.ODAT.CD', 'DC.DAC.FINL.CD',\n",
-       "       'SM.POP.NETM', 'DC.DAC.JPNL.CD', 'DT.NFL.UNRW.CD',\n",
-       "       'DC.DAC.IRLL.CD', 'DC.DAC.ISLL.CD', 'DC.DAC.DNKL.CD',\n",
-       "       'DT.ODA.ODAT.XP.ZS', 'DC.DAC.NLDL.CD', 'DT.ODA.ODAT.MP.ZS',\n",
-       "       'DC.DAC.KORL.CD', 'SI.DST.FRST.20', 'DT.NFL.IFAD.CD',\n",
-       "       'BX.GRT.EXTA.CD.WD', 'SL.EMP.VULN.ZS', 'DT.ODA.ODAT.GN.ZS',\n",
-       "       'DC.DAC.DEUL.CD', 'DC.DAC.GRCL.CD', 'DC.DAC.USAL.CD',\n",
-       "       'DT.NFL.WHOL.CD', 'DT.NFL.UNEC.CD', 'DC.DAC.CANL.CD',\n",
-       "       'DT.NFL.UNWT.CD', 'DC.DAC.SWEL.CD', 'DC.DAC.GBRL.CD',\n",
-       "       'DC.DAC.CECL.CD', 'DT.ODA.ALLD.KD', 'DT.ODA.OATL.KD',\n",
-       "       'DC.DAC.HUNL.CD', 'SH.STA.ANVC.ZS', 'DC.DAC.FRAL.CD',\n",
-       "       'DC.DAC.ESPL.CD', 'DT.NFL.UNID.CD', 'DC.DAC.AUTL.CD',\n",
-       "       'DT.NFL.ILOG.CD', 'DC.DAC.LUXL.CD', 'SH.STA.STNT.ZS',\n",
-       "       'DC.DAC.ITAL.CD', 'DT.NFL.FAOG.CD', 'DT.NFL.UNEP.CD',\n",
-       "       'DT.ODA.ODAT.GI.ZS', 'SI.POV.DDAY', 'DC.DAC.BELL.CD',\n",
-       "       'DC.DAC.TOTL.CD', 'SH.DYN.MORT', 'DC.DAC.NORL.CD',\n",
-       "       'DT.NFL.UNTA.CD', 'DT.NFL.UNDP.CD', 'SE.PRM.CMPT.ZS',\n",
-       "       'DT.ODA.ODAT.KD', 'DT.ODA.ODAT.PC.ZS', 'DC.DAC.CHEL.CD',\n",
-       "       'SH.TBS.INCD', 'DC.DAC.PRTL.CD', 'DT.NFL.UNPB.CD',\n",
-       "       'DT.NFL.UNFP.CD', 'DT.NFL.UNAI.CD', 'SH.STA.MMRT',\n",
-       "       'DC.DAC.AUSL.CD', 'DC.DAC.POLL.CD', 'DT.ODA.ALLD.CD',\n",
-       "       'SE.ENR.PRSC.FM.ZS', 'DC.DAC.SVKL.CD', 'DC.DAC.NZLL.CD',\n",
-       "       'DT.ODA.OATL.CD', 'DC.DAC.CZEL.CD', 'IE.PPN.TRAN.CD',\n",
-       "       'IS.SHP.GCNW.XQ', 'IE.PPI.WATR.CD', 'EG.USE.ELEC.KH.PC',\n",
-       "       'EG.ELC.PETR.ZS', 'IE.PPN.ENGY.CD', 'IE.PPI.ICTI.CD',\n",
-       "       'ER.H2O.FWDM.ZS', 'EG.ELC.NGAS.ZS', 'IS.AIR.PSGR', 'IP.IDS.RSCT',\n",
-       "       'IT.CEL.SETS', 'TX.VAL.ICTG.ZS.UN', 'ER.H2O.FWIN.ZS',\n",
-       "       'IS.AIR.GOOD.MT.K1', 'IP.TMK.RSCT', 'EG.ELC.COAL.ZS',\n",
-       "       'ER.H2O.FWTL.ZS', 'ER.H2O.INTR.K3', 'IS.AIR.DPRT', 'IT.MLT.MAIN',\n",
-       "       'IT.NET.BBND', 'IP.IDS.NRCT', 'IP.TMK.NRCT', 'EG.ELC.LOSS.ZS',\n",
-       "       'ER.H2O.FWAG.ZS', 'TM.VAL.ICTG.ZS.UN', 'IS.RRS.PASG.KM',\n",
-       "       'IS.RRS.TOTL.KM', 'ER.H2O.INTR.PC', 'IT.MLT.MAIN.P2',\n",
-       "       'IS.SHP.GOOD.TU', 'IT.CEL.SETS.P2', 'IT.NET.USER.ZS',\n",
-       "       'IE.PPN.ICTI.CD', 'IT.NET.BBND.P2', 'IT.NET.SECR',\n",
-       "       'ER.H2O.FWTL.K3', 'IS.RRS.GOOD.MT.K6', 'IT.NET.SECR.P6',\n",
-       "       'EG.ELC.NUCL.ZS', 'IE.PPI.ENGY.CD', 'IE.PPN.WATR.CD',\n",
-       "       'BX.GSR.CCIS.CD', 'EG.ELC.HYRO.ZS', 'IE.PPI.TRAN.CD',\n",
-       "       'BX.GSR.CCIS.ZS'], dtype=object)"
+       "           Series_Code                                        Series_Name  \\\n",
+       "0    BX.GRT.EXTA.CD.WD  Grants, excluding technical cooperation (BoP, ...   \n",
+       "1    BX.GRT.TECH.CD.WD    Technical cooperation grants (BoP, current US$)   \n",
+       "2       DC.DAC.AUSL.CD  Net bilateral aid flows from DAC donors, Austr...   \n",
+       "3       DC.DAC.AUTL.CD  Net bilateral aid flows from DAC donors, Austr...   \n",
+       "4       DC.DAC.BELL.CD  Net bilateral aid flows from DAC donors, Belgi...   \n",
+       "..                 ...                                                ...   \n",
+       "116        IT.NET.SECR                            Secure Internet servers   \n",
+       "117     IT.NET.SECR.P6     Secure Internet servers (per 1 million people)   \n",
+       "118     IT.NET.USER.ZS   Individuals using the Internet (% of population)   \n",
+       "119  TM.VAL.ICTG.ZS.UN          ICT goods imports (% total goods imports)   \n",
+       "120  TX.VAL.ICTG.ZS.UN       ICT goods exports (% of total goods exports)   \n",
+       "\n",
+       "                                            sourceNote  \n",
+       "0    Grants are defined as legally binding commitme...  \n",
+       "1    Technical cooperation grants include free-stan...  \n",
+       "2    Net bilateral aid flows from DAC donors are th...  \n",
+       "3    Net bilateral aid flows from DAC donors are th...  \n",
+       "4    Net bilateral aid flows from DAC donors are th...  \n",
+       "..                                                 ...  \n",
+       "116  The number of distinct, publicly-trusted TLS/S...  \n",
+       "117  The number of distinct, publicly-trusted TLS/S...  \n",
+       "118  Internet users are individuals who have used t...  \n",
+       "119  Information and communication technology goods...  \n",
+       "120  Information and communication technology goods...  \n",
+       "\n",
+       "[121 rows x 3 columns]"
       ]
      },
      "execution_count": 10,
@@ -533,8 +582,51 @@
     }
    ],
    "source": [
-    "df.Series_Code.unique() # 121 "
+    "series_info = pd.read_excel('./Series.xlsx') \n",
+    "series_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_series_info(series_code):\n",
+    "    sheet = pd.read_excel('./Series.xlsx') \n",
+    "    row = sheet.loc[sheet['Series_Code']==series_code]\n",
+    "\n",
+    "    s_name = row['Series_Name'].values[0]\n",
+    "    s_info = row['sourceNote'].values[0]\n",
+    "    return s_name, s_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Individuals using the Internet (% of population)\n",
+      "Internet users are individuals who have used the Internet (from any location) in the last 3 months. The Internet can be used via a computer, mobile phone, personal digital assistant, games machine, digital TV etc.\n"
+     ]
+    }
+   ],
+   "source": [
+    "series_name, series_info = get_series_info('IT.NET.USER.ZS')\n",
+    "print(series_name)\n",
+    "print(series_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -556,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
