Update EDA.ipynb (WIP)

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tpoic  \n",
+    "#### Topic  \n",
     "- Aid-effectness : 2   \n",
     "- Infrastructure : 9    "
    ]
