--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,6 +36,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(action='ignore') "
+      ],
+      "metadata": {
+        "id": "4eOblw0YSJ6m"
+      },
+      "execution_count": 197,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Cleaning Dataset "
@@ -1484,24 +1496,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 719
+          "height": 562
         },
         "id": "G-LHO-9c-Nof",
-        "outputId": "ebe705bb-510f-48a7-b326-24db6722c130"
+        "outputId": "02118bc5-90a0-46b3-c15c-d05066810926"
       },
-      "execution_count": 189,
+      "execution_count": 198,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1533,24 +1534,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 699
+          "height": 607
         },
         "id": "LcVDrzJWCOSb",
-        "outputId": "a6f983ca-f620-420d-8433-fef184b92281"
+        "outputId": "2dee718b-c887-451c-f9db-f001cff835be"
       },
-      "execution_count": 154,
+      "execution_count": 199,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1582,24 +1572,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 719
+          "height": 560
         },
         "id": "gdBrB9t2-AcX",
-        "outputId": "6d1c6b27-fa29-492b-ef98-aff547361e52"
+        "outputId": "4362a7fc-2d5b-4ab8-c079-46a6ddd656e1"
       },
-      "execution_count": 140,
+      "execution_count": 200,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1631,24 +1610,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 699
+          "height": 607
         },
         "id": "TBuqkeOF-Zlw",
-        "outputId": "a05a1d7b-e6b6-4cd2-c2bf-97398af0401d"
+        "outputId": "d9556803-0072-4f3d-be0a-cb29df5d5f61"
       },
-      "execution_count": 196,
+      "execution_count": 201,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1693,9 +1661,9 @@
           "height": 456
         },
         "id": "XYipX9YwaN8Q",
-        "outputId": "4d7d18df-4516-43c9-bde6-8f047312787a"
+        "outputId": "57fbbe47-9153-4554-fcb8-238cdd8d0f53"
       },
-      "execution_count": 58,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1765,7 +1733,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b19b4e4-5586-49fa-bb55-94f1af662863\">\n",
+              "  <div id=\"df-c02c0f21-2f40-4ad6-b889-a8c49f23557a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2053,7 +2021,7 @@
               "</table>\n",
               "<p>10 rows × 65 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b19b4e4-5586-49fa-bb55-94f1af662863')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c02c0f21-2f40-4ad6-b889-a8c49f23557a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2104,12 +2072,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6b19b4e4-5586-49fa-bb55-94f1af662863 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c02c0f21-2f40-4ad6-b889-a8c49f23557a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6b19b4e4-5586-49fa-bb55-94f1af662863');\n",
+              "          const element = document.querySelector('#df-c02c0f21-2f40-4ad6-b889-a8c49f23557a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2132,7 +2100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 203
         }
       ]
     },
@@ -2147,24 +2115,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 488
         },
         "id": "egNv2muFTaDp",
-        "outputId": "8aadc78a-108c-4148-e242-a13d9418ce2b"
+        "outputId": "394b4152-7f12-46ba-f8a1-ec0b378684d7"
       },
-      "execution_count": 59,
+      "execution_count": 204,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2277,7 +2234,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8afef4b3-91b7-44cb-a773-204d7ccefcb3\">\n",
+              "  <div id=\"df-d15c5a8f-2066-4718-a35f-b4e4b334e156\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2589,7 +2546,7 @@
               "</table>\n",
               "<p>61 rows × 51 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8afef4b3-91b7-44cb-a773-204d7ccefcb3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d15c5a8f-2066-4718-a35f-b4e4b334e156')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2640,12 +2597,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8afef4b3-91b7-44cb-a773-204d7ccefcb3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d15c5a8f-2066-4718-a35f-b4e4b334e156 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8afef4b3-91b7-44cb-a773-204d7ccefcb3');\n",
+              "          const element = document.querySelector('#df-d15c5a8f-2066-4718-a35f-b4e4b334e156');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2668,7 +2625,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 204
         }
       ]
     },
